--- a/pages/past.html
+++ b/pages/past.html
@@ -86,87 +86,8 @@
     </nav>
     <hr>
     <main class="container-fluid p-5 bg-dark">
-        <div class="row gap-5 justify-content-around">
-            <article class="card m-1" style="width: 18rem;">
-                <img src="../Assets/Feria_de_comidas7.jpg" class="card-img-top card__img mt-2" alt="Event image">
-                <div class="card-body">
-                    <h5 class="card-title text-center">Festival of the collectivities</h5>
-                    <p class="card-text text-center">Enjoy your favorite dishes from different countries in a unique
-                        event fot the whole family.</p>
-                </div>
-                <div class="d-flex justify-content-between align-items-baseline">
-                    <p>Price: $ 5</p>
-                    <a href="#" class="btn bg-dark text-light">view details...</a>
-                </div>
-            </article>
-            <article class="card m-1" style="width: 18rem;">
-                <img src="../Assets/Salida_al_museo5.jpg" class="card-img-top card__img mt-2" alt="Event image">
-                <div class="card-body">
-                    <h5 class="card-title text-center">Jurassic Park</h5>
-                    <p class="card-text text-center">Let's go to the paleontology museum for an incredible tour to learn
-                        about the largest dinosaurs.</p>
-                </div>
-                <div class="d-flex justify-content-between align-items-baseline">
-                    <p>Price: $ 15</p>
-                    <a href="#" class="btn bg-dark text-light">view details...</a>
-                </div>
-            </article>
-            <article class="card m-1" style="width: 18rem;">
-                <img src="../Assets/Fiesta_de_disfraces1.jpg" class="card-img-top card__img mt-2" alt="Event image">
-                <div class="card-body">
-                    <h5 class="card-title text-center">Halloween Night</h5>
-                    <p class="card-text text-center">Come in your scariest costume character to win amazing prizes.</p>
-                </div>
-                <div class="d-flex justify-content-between align-items-baseline">
-                    <p>Price: $ 12</p>
-                    <a href="#" class="btn bg-dark text-light">view details...</a>
-                </div>
-            </article>
-            <article class="card m-1" style="width: 18rem;">
-                <img src="../Assets/Concierto_de_musica1.jpg" class="card-img-top card__img mt-2" alt="Event image">
-                <div class="card-body">
-                    <h5 class="card-title text-center">Metallica in concert</h5>
-                    <p class="card-text text-center">The only concert of the most emblematic band in the world.</p>
-                </div>
-                <div class="d-flex justify-content-between align-items-baseline">
-                    <p>Price: $ 150</p>
-                    <a href="#" class="btn bg-dark text-light">view details...</a>
-                </div>
-            </article>
-            <article class="card m-1" style="width: 18rem;">
-                <img src="../Assets/Maraton3.jpg" class="card-img-top card__img mt-2" alt="Event image">
-                <div class="card-body">
-                    <h5 class="card-title text-center">10K for life</h5>
-                    <p class="card-text text-center">Come and excercise, improve your health and lifestyle.</p>
-                </div>
-                <div class="d-flex justify-content-between align-items-baseline">
-                    <p>Price: $ 3</p>
-                    <a href="#" class="btn bg-dark text-light">view details...</a>
-                </div>
-            </article>
-            <article class="card m-1" style="width: 18rem;">
-                <img src="../Assets/Books.jpg" class="card-img-top card__img mt-2" alt="Event image">
-                <div class="card-body">
-                    <h5 class="card-title text-center">School Book Fair</h5>
-                    <p class="card-text text-center">Bring your unused school book and bring the one you need.</p>
-                </div>
-                <div class="d-flex justify-content-between align-items-baseline">
-                    <p>Price: $ 1</p>
-                    <a href="#" class="btn bg-dark text-light">view details...</a>
-                </div>
-            </article>
-            <article class="card m-1" style="width: 18rem;">
-                <img src="../Assets/Cine7.jpg" class="card-img-top card__img mt-2" alt="Event image">
-                <div class="card-body">
-                    <h5 class="card-title text-center">Avengers</h5>
-                    <p class="card-text text-center">Marvel's Avengers 3d premiere the start of an epic saga with your
-                        best superheroes.</p>
-                </div>
-                <div class="d-flex justify-content-between align-items-baseline">
-                    <p>Price: $ 250</p>
-                    <a href="#" class="btn bg-dark text-light">view details...</a>
-                </div>
-            </article>
+        <div class="row gap-5 justify-content-around" id="pastGallery">
+            
         </div>
     </main>
     <footer class="container-fluid">
@@ -191,6 +112,8 @@
             <h2 class="col text-light text-center p-5">Cohort 35/36</h2>
         </div>
     </footer>
+    <script src="../JS/data.js"></script>
+    <script src="../JS/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
