agrego let faltantes en el iterador de for y corrijo la ruta estatica de la imagen de details.html

--- a/pages/details.html
+++ b/pages/details.html
@@ -52,7 +52,7 @@
         <div class="card ms-lg-5 me-lg-5 bg-dark text-light">
             <div class="row g-0">
                 <div class="col-md-6 align-self-center p-3">
-                    <img src="../Assets/Feria_de_comidas7.jpg" class="img-fluid rounded-start detail__img"
+                    <img src="https://amazingeventsapi.herokuapp.com/api/img/Feriadecomidas7.jpg" class="img-fluid rounded-start detail__img"
                         alt="product image">
                 </div>
                 <div class="col-md-6 p-3">
