--- a/index.html
+++ b/index.html
@@ -53,27 +53,8 @@
   </header>
   <nav class="container container-md-fluid mt-md-5">
     <div class="row justify-content-between ms-md-5 me-md-5">
-      <div class="col d-flex gap-2 gap-md-5 justify-content-center flex-wrap ms-1 me-1 align-items-center">
-        <label class="form-check-label">
-          <input class="form-check-input" type="checkbox" value="">
-          Category
-        </label>
-        <label class="form-check-label">
-          <input class="form-check-input" type="checkbox" value="">
-          Category
-        </label>
-        <label class="form-check-label">
-          <input class="form-check-input" type="checkbox" value="">
-          Category
-        </label>
-        <label class="form-check-label">
-          <input class="form-check-input" type="checkbox" value="">
-          Category
-        </label>
-        <label class="form-check-label">
-          <input class="form-check-input" type="checkbox" value="">
-          Category
-        </label>
+      <div class="col d-flex gap-2 gap-md-5 justify-content-center flex-wrap ms-1 me-1 align-items-center" id="categoryContainer">
+        
       </div>
       <form class="col-md-12 col-lg-4 d-flex">
         <input class="search__input form-control ms-lg-2 me-2" type="search" placeholder="Search" aria-label="Search">
