filtrado checkbox terminado

--- a/pages/upcoming.html
+++ b/pages/upcoming.html
@@ -56,8 +56,8 @@
       <div class="col d-flex gap-2 gap-md-5 justify-content-center flex-wrap ms-1 me-1 align-items-center" id="categoryContainer">
         
       </div>
-      <form class="col-md-12 col-lg-4 d-flex">
-        <input class="search__input form-control ms-lg-2 me-2" type="search" placeholder="Search" aria-label="Search">
+      <form class="col-md-12 col-lg-4 d-flex search__form">
+        <input class="form-control ms-lg-2 me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn search__btn bg-dark" type="submit">
           <img src="../Assets/search-3-32.png" alt="search image">
         </button>
