Filtros aplicados con exito en galerias de eventos

--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
       </div>
       <form class="col-md-12 col-lg-4 d-flex search__form">
         <input class="form-control ms-lg-2 me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn search__btn bg-dark" type="submit">
-          <img src="./Assets/search-3-32.png" alt="search image">
-        </button>
+        <button class="btn search__btn bg-dark" type="submit" id="search"></button>
       </form>
     </div>
   </nav>
