--- a/pages/stats.html
+++ b/pages/stats.html
@@ -30,7 +30,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
         <ul class="navbar-nav gap-5 me-lg-3 mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="../index.html">Stats</a>
+            <a class="nav-link" aria-current="page" href="../index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./upcoming.html">Upcoming Events</a>
@@ -42,7 +42,7 @@
             <a class="nav-link" href="./contact.html">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link stats" href="./stats.html">Stats</a>
+            <a class="nav-link active" href="./stats.html">Stats</a>
           </li>
         </ul>
       </div>
