--- a/pages/past.html
+++ b/pages/past.html
@@ -51,7 +51,7 @@
     <header class="d-flex align-items-center justify-content-center">
         <h1 class="text-center text-light">Past Events</h1>
     </header>
-    <nav class="container container-md-fluid mt-md-5">
+    <nav class="container-fluid mt-md-5">
         <div class="row justify-content-between ms-md-5 me-md-5">
             <div class="col d-flex gap-2 gap-md-5 justify-content-center flex-wrap ms-1 me-1 align-items-center" id="categoryContainer">
                
