--- a/pages/details.html
+++ b/pages/details.html
@@ -17,7 +17,7 @@
     <link rel="shortcut icon" href="../Assets/Logo_Amazing_Events.png" type="image/x-icon">
 </head>
 
-<body class="body__details">
+<body class="bg-dark">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
@@ -48,44 +48,12 @@
             </div>
         </div>
     </nav>
-    <section class="container-fluid container-md d-flex align-items-center details__section mt-5 mb-3">
-        <div class="card ms-lg-5 me-lg-5 bg-dark text-light">
-            <div class="row g-0">
-                <div class="col-md-6 align-self-center p-3">
-                    <img src="https://amazingeventsapi.herokuapp.com/api/img/Feriadecomidas7.jpg" class="img-fluid rounded-start detail__img"
-                        alt="product image">
-                </div>
-                <div class="col-md-6 p-3">
-                    <div class="card-body">
-                        <h5 class="card-title text-center">Festival of the collectivities</h5>
-                        <div class="row justify-content-center">
-                            <div class="col">
-                                <dl>
-                                    <dt>Date:</dt>
-                                    <dd>12/12/2021</dd>
-                                    <dt>Description:</dt>
-                                    <dd>Enjoy your favorite dishes from different countries in a unique event for the
-                                        whole family.</dd>
-                                    <dt>Category:</dt>
-                                    <dd>Food Fair</dd>
-                                </dl>
-                            </div>
-                            <div class="col">
-                                <dl>
-                                    <dt>Place:</dt>
-                                    <dd>Room A</dd>
-                                    <dt>Capacity:</dt>
-                                    <dd>45.000</dd>
-                                    <dt>Assistance</dt>
-                                    <dd>42.756</dd>
-                                    <dt>Price</dt>
-                                    <dd>$ 5</dd>
-                                </dl>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <header class="d-flex align-items-center justify-content-center">
+        <h1 class="text-center text-light">Event Details</h1>
+      </header>
+    <section class="container-fluid container-md d-flex justify-content-center align-items-center details__section mt-5 mb-3">
+        <div class="d-flex justify-content-center" id="detailsContainer">
+
         </div>
     </section>
     <footer class="container-fluid">
@@ -110,6 +78,8 @@
             <h2 class="col text-light text-center p-5">Cohort 35/36</h2>
         </div>
     </footer>
+    <script src="../JS/data.js"></script>
+    <script src="../JS/details.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
