ajustes responsive table

--- a/pages/stats.html
+++ b/pages/stats.html
@@ -54,41 +54,47 @@
   <section class="container-fluid bg-dark pt-5 pb-5 table__section">
     <div class="row ps-1 pe-1 mt-3">
       <h3 class="text-light text-center">Events statistics</h3>
-      <table class="table table-bordered table-hover table-dark mb-5">
-        <thead class="text-center">
-          <tr>
-            <th class="table__col" scope="col">EVENT WITH THE HIGHEST PERCENTAGE OF ATTENDANCE</th>
-            <th class="table__col" scope="col">EVENT WITH THE LOWEST PERCENTAGE OF ATTENDANCE</th>
-            <th class="table__col" scope="col">EVENT WITH LARGER CAPACITY</th>
-          </tr>
-        </thead>
-        <tbody id="statsTable">
-        </tbody>
-      </table>
+      <div class="table-responsive">
+        <table class="table table-bordered table-hover table-dark mb-5">
+          <thead class="text-center">
+            <tr>
+              <th scope="col">EVENT WITH THE HIGHEST PERCENTAGE OF ATTENDANCE</th>
+              <th scope="col">EVENT WITH THE LOWEST PERCENTAGE OF ATTENDANCE</th>
+              <th scope="col">EVENT WITH LARGER CAPACITY</th>
+            </tr>
+          </thead>
+          <tbody id="statsTable">
+          </tbody>
+        </table>
+      </div>
       <h3 class="text-light text-center">Upcoming events statistics by category</h3>
-      <table class="table table-bordered table-hover table-dark mb-5">
-        <thead class="text-center">
-          <tr>
-            <th class="table__col" scope="col">CATEGORIES</th>
-            <th class="table__col" scope="col">REVENUES (ESTIMATE)</th>
-            <th class="table__col" scope="col">PERCENTAGE OF ATTENDANCE (ESTIMATE)</th>
-          </tr>
-        </thead>
-        <tbody id="upcomingTable">
-        </tbody>
-      </table>
+      <div class="table-responsive">
+        <table class="table table-bordered table-hover table-dark mb-5">
+          <thead class="text-center">
+            <tr>
+              <th scope="col">CATEGORIES</th>
+              <th scope="col">REVENUES (ESTIMATE)</th>
+              <th scope="col">PERCENTAGE OF ATTENDANCE (ESTIMATE)</th>
+            </tr>
+          </thead>
+          <tbody id="upcomingTable">
+          </tbody>
+        </table>
+      </div>
       <h3 class="text-light text-center">Past events statistics by category</h3>
-      <table class="table table-bordered table-hover table-dark mb-5">
-        <thead class="text-center">
-          <tr>
-            <th class="table__col" scope="col">CATEGORIES</th>
-            <th class="table__col" scope="col">REVENUES</th>
-            <th class="table__col" scope="col">PERCENTAGE OF ATTENDANCE</th>
-          </tr>
-        </thead>
-        <tbody id="pastTable">
-        </tbody>
-      </table>
+      <div class="table-responsive">
+        <table class="table table-bordered table-hover table-dark mb-5">
+          <thead class="text-center">
+            <tr>
+              <th scope="col">CATEGORIES</th>
+              <th scope="col">REVENUES</th>
+              <th scope="col">PERCENTAGE OF ATTENDANCE</th>
+            </tr>
+          </thead>
+          <tbody id="pastTable">
+          </tbody>
+        </table>
+      </div>
     </div>
   </section>
   <footer class="container-fluid">
